@@ -15,6 +15,8 @@ COM_PODCASTMANAGER_BATCH_TIP="If choosing to copy a podcast, any other actions s
 COM_PODCASTMANAGER_CONFIGURATION="Podcast Manager Configuration"
 COM_PODCASTMANAGER_CONFIG_FIELD_CUSTOMCODE_DESCRIPTION="Custom code to use for links to podcast episodes within articles and the front end feed view."
 COM_PODCASTMANAGER_CONFIG_FIELD_CUSTOMCODE_LABEL="Custom Link Code"
+COM_PODCASTMANAGER_CONFIG_FIELD_ENABLELOGGING_DESCRIPTION="Choose to enable logging to a file located at <site_root>/logs/podcastmanager.php.  This is beneficial to assist in troubleshooting issues, but when enabled, will log ALL site activity when Podcast Manager extensions are called upon."
+COM_PODCASTMANAGER_CONFIG_FIELD_ENABLELOGGING_LABEL="Enable Logging"
 COM_PODCASTMANAGER_CONFIG_FIELD_ITBLOCK_DESCRIPTION="Block the entire feed from iTunes."
 COM_PODCASTMANAGER_CONFIG_FIELD_ITCATEGORY1_DESCRIPTION="First category selection."
 COM_PODCASTMANAGER_CONFIG_FIELD_ITCATEGORY1_LABEL="Category 1"
