@@ -1,3 +1,6 @@
+1-December-2011 Michael Babker
++ Add option to enable/disable logging
+
 29-November-2011 Michael Babker
 - Remove jimport calls supported by autoloader
 ! Raise minimum version to Joomla! 1.7.3 + Platform 11.3 due to code removal
